--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "stylelint-scss": "^6.8.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0"
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "aos": "^2.3.4"
   }
 }
